trunk/Archive2/91/011099e8392834/output
main.cpp: In function 'int main()':
main.cpp:41:40: error: 'FuncAdd' was not declared in this scope
     auto &&refArray = FuncAdd(var, var1);
                                        ^
main.cpp: In function 'ugaw<long unsigned int [10][10]> GenerateBoardRand()':
main.cpp:84:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function 'bool bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)':
main.cpp:154:50: error: 'nBoadSize' was not declared in this scope
     if(DoSomethingForRangInDir(LEFT, FuncHelper, nBoadSize, x, y) && !bTmp)
                                                  ^
main.cpp: In instantiation of 'bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::EN_DIRECTION, auto:1, size_t, size_t, size_t)> [with auto:1 = bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(size_t&)>; size_t = long unsigned int]':
main.cpp:166:63:   required from here
main.cpp:101:37: error: could not convert 'enFunc.bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(size_t&)>((* & refTable[Y][i]))' from 'void' to 'bool'
             if(enFunc(refTable[Y][i])) break;
                                     ^
main.cpp:111:37: error: could not convert 'enFunc.bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(size_t&)>((* & refTable[Y][i]))' from 'void' to 'bool'
             if(enFunc(refTable[Y][i])) break;
                                     ^
main.cpp:121:37: error: could not convert 'enFunc.bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(size_t&)>((* & refTable[i][X]))' from 'void' to 'bool'
             if(enFunc(refTable[i][X])) break;
                                     ^
main.cpp:131:37: error: could not convert 'enFunc.bSetBoad(size_t, size_t, size_t (&)[10][10], size_t)::<lambda(size_t&)>((* & refTable[i][X]))' from 'void' to 'bool'
             if(enFunc(refTable[i][X])) break;
                                     ^
main.cpp:175:51: error: 'nBoadSize' was not declared in this scope
     if(DoSomethingForRangInDir(RIGHT, FuncHelper, nBoadSize, x, y) && !bTmp)
                                                   ^
main.cpp:196:48: error: 'nBoadSize' was not declared in this scope
     if(DoSomethingForRangInDir(UP, FuncHelper, nBoadSize, x, y) && !bTmp)
                                                ^
main.cpp:217:50: error: 'nBoadSize' was not declared in this scope
     if(DoSomethingForRangInDir(DOWN, FuncHelper, nBoadSize, x, y) && !bTmp)
                                                  ^
